--- a/sass/modules/_cases.scss
+++ b/sass/modules/_cases.scss
@@ -201,22 +201,21 @@ section.client {
 
     i {
       display: block;
+      margin: 50px 0 0 50px;
       font-size: 16px;
       line-height: 34px;
       color: $grey3;
       font-style: italic;
       font-weight: lighter;
-      text-align: center;
+      text-align: left;
       width: 80%;
-      margin: auto;
-      margin-top: 30px;
     }
 
     em {
-      margin-top: 20px;
+      margin: 20px 0 0 50px;
       display: block;
       color: rgba( $he_red, 0.8 );
-      text-align: center;
+      text-align: left;
     }
   }
 }
